homepage requires homepage_var_ prefix

--- a/docker/homepage/docker-compose.yml
+++ b/docker/homepage/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       - ${CONFIG_PATH}:/app/config
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      HOMEPAGE_ALLOWED_HOSTS: home.benjiao.net
-      HOMEPAGE_PROXMOX_TOKEN: ${HOMEPAGE_PROXMOX_TOKEN}
-      HOMEPAGE_PROXMOX_SECRET: ${HOMEPAGE_PROXMOX_SECRET}
-      HOMEPAGE_OPENWEATHERMAP_API_KEY: ${HOMEPAGE_OPENWEATHERMAP_API_KEY}
-      HOMEPAGE_WEATHERAPI_API_KEY: ${HOMEPAGE_WEATHERAPI_API_KEY}
+      HOMEPAGE_VAR_ALLOWED_HOSTS: home.benjiao.net
+      HOMEPAGE_VAR_PROXMOX_TOKEN: ${HOMEPAGE_VAR_PROXMOX_TOKEN}
+      HOMEPAGE_VAR_PROXMOX_SECRET: ${HOMEPAGE_VAR_PROXMOX_SECRET}
+      HOMEPAGE_VAR_OPENWEATHERMAP_API_KEY: ${HOMEPAGE_VAR_OPENWEATHERMAP_API_KEY}
+      HOMEPAGE_VAR_WEATHERAPI_API_KEY: ${HOMEPAGE_VAR_WEATHERAPI_API_KEY}
     restart: unless-stopped
