--- a/docker/homepage/docker-compose.yml
+++ b/docker/homepage/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ${CONFIG_PATH}:/app/config
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      HOMEPAGE_VAR_ALLOWED_HOSTS: home.benjiao.net
+      HOMEPAGE_ALLOWED_HOSTS: home.benjiao.net
       HOMEPAGE_VAR_PROXMOX_TOKEN: ${HOMEPAGE_VAR_PROXMOX_TOKEN}
       HOMEPAGE_VAR_PROXMOX_SECRET: ${HOMEPAGE_VAR_PROXMOX_SECRET}
       HOMEPAGE_VAR_OPENWEATHERMAP_API_KEY: ${HOMEPAGE_VAR_OPENWEATHERMAP_API_KEY}
