--- a/docker/grafana/docker-compose.yml
+++ b/docker/grafana/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - '--web.console.libraries=/etc/prometheus_config/console_libraries'
       - '--web.console.templates=/etc/prometheus_config/consoles'
       - '--web.enable-lifecycle'
+      - '--web.external-url=${PROMETHEUS_EXTERNAL_URL:-http://localhost:9090}'
     ports:
       - '${PROMETHEUS_PORT:-9090}:9090'
     networks:
